<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:padding="36dp">


    <TextView
        android:id="@+id/tv_start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/leaguespartanbold"
        android:text="@string/start_title"
        android:textColor="@color/secondary_color"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120sp"/>

    <TextView
        android:id="@+id/tv_start_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:paddingStart="18dp"
        android:text="@string/start_sub_title"
        android:textSize="20sp"
        android:layout_marginTop="180sp"
        android:layout_marginEnd="170sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_start_sub_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:paddingStart="19dp"
        android:text="@string/start_sub_title2"
        android:layout_marginEnd="57sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/tv_start_sub_title" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_sub_title2"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        style="@style/ButtonGrey"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        tools:layout_editor_absoluteX="36dp" />

    <TextView
        android:id="@+id/tv_forgot_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/leaguespartanbold"
        android:text="@string/login_forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/secondary_color"
        android:textSize="13sp"
        android:paddingTop="15sp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <TextView
        android:id="@+id/goto_signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_havent_account"
        android:textAlignment="center"
        android:textSize="16sp"
        android:paddingTop="250sp"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pw"/>


</androidx.constraintlayout.widget.ConstraintLayout>
