<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/white"
    android:padding="36dp">


    <TextView
        android:id="@+id/tv_signup_start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:paddingStart="18dp"
        android:text="@string/signuptitle_create_account"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80sp"
        android:layout_marginEnd="150sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/su_username"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_start_title"
        android:layout_marginTop="36dp"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_su_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/su_email"
        app:layout_constraintTop_toBottomOf="@id/signup_username"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_su_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/su_password"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/signup_email"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_su_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_reenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/su_reenter_password"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/signup_password"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_su_reenter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        style="@style/ButtonGrey"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18sp"
        app:layout_constraintTop_toBottomOf="@+id/signup_reenter_password" />


    <TextView
        android:id="@+id/goto_signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_have_account"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>