<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/white"
    android:padding="36dp">

    <TextView
        android:id="@+id/tv_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:paddingStart="18dp"
        android:text="@string/title_forgot_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120sp"
        android:layout_marginEnd="160sp"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="100dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_pw_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fpw_email"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pw"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fpw_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_email_fpw"
        style="@style/ButtonPurple"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/fpw_send_email"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pw_email"
        android:layout_marginTop="10sp"
        tools:layout_editor_absoluteX="36dp" />





</androidx.constraintlayout.widget.ConstraintLayout>
